--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body, html {
     background: url('curtain.jpg') no-repeat center center;
     background-size: cover;
     opacity: 1;
+    z-index: 10;
     position: absolute; /* Change: Ensure each half starts from the center */
 }
 
