--- a/index2.css
+++ b/index2.css
@@ -31,16 +31,6 @@ body, html {
     opacity: 1;
 }
 
-/* Animation for curtain opening */
-@keyframes curtain-effect {
-    0% {
-        clip-path: inset(0 0 0 0);
-    }
-    100% {
-        clip-path: inset(0 50% 0 50%);
-    }
-}
-
 /* Logo Styling */
 .logo {
     position: absolute;
@@ -66,6 +56,7 @@ nav {
     margin: 0; /* Reset margin on the ul */
     justify-content: center; /* Center the list items */
     background-color: #333; /* Background color for the nav bar */
+    font-family: Helvetica, Arial, sans-serif; 
 }
 
 #nav-ul li {
