--- a/index2.css
+++ b/index2.css
@@ -69,6 +69,7 @@ nav {
     padding: 10px 20px; /* Add padding inside links */
     display: block; /* Make links fill the li area */
     border-radius: 4px; /* Optional: Rounded corners */
+    font-size: 18px; 
 }
 
 #nav-ul li a:hover {
