--- a/index.css
+++ b/index.css
@@ -10,7 +10,8 @@ body, html {
 #heading{
     font-family: 'Helvetica', sans-serif;
     text-align: center;
-    font-size: 30px; 
+    font-size: 20px; 
+    color: var(--gold);
 }
 
 
